--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,57 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  background: #0a0a0a;
+  color: #ededed;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+
+.container {
+  max-width: 1536px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+
+  border: red 1px solid;
+}
+
+/* 2xl */
+@media (max-width: 1536px) {
+  .container {
+    max-width: 1280px;
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/* xl */
+@media (max-width: 1280px) {
+  .container {
+    max-width: 1024px;
+  }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* lg */
+@media (max-width: 1024px) {
+  .container {
+    max-width: 768px;
+  }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+/* md */
+@media (max-width: 768px) {
+  .container {
+    max-width: 640px;
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* sm */
+@media (max-width: 640px) {
+  .container {
+    max-width: 475px;
+  }
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* xs */
+@media (max-width: 475px) {
+  .container {
+    max-width: 100%;
   }
 }
