--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,13 @@
   border: red 1px solid;
 }
 
+/*-----------------------NAVBAR--------------------------*/
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /*-----------------------LOGIN--------------------------*/
 .login-header {
   display: flex;
