--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,14 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  --light: #fed2e2;
+  --secound-light: #e9a5f1;
+  --dark: #8f87f1;
+  --secound-dark: #c68efd;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--light);
+  background: var(--dark);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
