--- a/app/components/NavBar.module.css
+++ b/app/components/NavBar.module.css
@@ -1,6 +1,6 @@
 .navbar_main {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
   padding: 20px;
 }
@@ -9,20 +9,15 @@
   text-decoration: none;
   padding: 20px 24px;
   background-color: var(--secound-dark);
-  color: var(--light);
+  color: rgb(19, 19, 19);
   margin-right: 10px;
   border-radius: 20px;
   font-size: 1.3rem;
   font-weight: 600;
+  letter-spacing: 0.8px;
 }
 
 .navbar_left {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.navbar_mid {
   display: flex;
   justify-content: center;
   align-items: center;
